--- a/lab/week5.html
+++ b/lab/week5.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="current mt-8">
-      <!-- An example only! You should delete the contents of this div when done. -->
+      <!-- An example only! You should delete the contents of this div when done.
       <div class="text-center space-y-2">
         <div class="font-bold text-3xl">Current Weather for Chicago, Illinois</div>
         <div class="font-bold">
@@ -39,7 +39,7 @@
           and
           <span class="conditions">Partly Cloudy</span>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="forecast space-y-4">
